ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/ingress.class: nginx
  name: ingress-service
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: multi-client-cluster-service
            port:
              number: 3000
        path: /
        pathType: Prefix
      - backend:
          service:
            name: multi-server-service
            port:
              number: 5000
        path: /api(/|$)(.*)
        pathType: ImplementationSpecific
